# open-deep-research

./: .env.example  .gitignore  README.md  pyproject.toml
codex_skill/open-deep-research/: SKILL.md
skills/open-deep-research/: SKILL.md
skills/open-deep-research/agents/: openai.yaml
skills/open-deep-research/references/: commands.md
skills/open-deep-research/scripts/: install_or_upgrade.sh  run_paths.sh  run_report.sh
src/open_deep_research/: api.py  cli.py  config.py  fetchers.py  llm.py  models.py  openalex.py  planner.py  reporting.py  research.py
tests/: test_cli.py  test_core.py
