[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-deep-research"
version = "0.1.0"
description = "OpenAlex-based deep research agent with an OpenAI-compatible LLM interface."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Birger and Codex" }
]
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=5.0.0"]

[project.scripts]
open-deep-research = "open_deep_research.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

